fix(form-field): prevent text from aligning center

--- a/src/components/form-field/form-field.css
+++ b/src/components/form-field/form-field.css
@@ -46,6 +46,7 @@ label.cx-form-field {
   font-size: 0.875rem;
   line-height: 1.71;
   font-weight: 500;
+  text-align: left;
 }
 
 .cx-form-field__placeholder {
@@ -53,6 +54,7 @@ label.cx-form-field {
   font-size: 0.75rem;
   font-weight: 400;
   line-height: 1.83;
+  text-align: left;
 }
 
 .cx-form-field__input-container {
@@ -87,6 +89,7 @@ label.cx-form-field {
   font-size: 0.75rem;
   line-height: 1.8;
   font-weight: 400;
+  text-align: left;
   white-space: nowrap;
   overflow-y: clip;
   height: 0rem;
